--- a/README.org
+++ b/README.org
@@ -4,6 +4,13 @@
 #+exclude_tags: noexport
 #+creator: Emacs 27.2 (Org mode 9.4.6)
 
+* What is this?
+I’ve been handed an exercise of origin unknown in an interview and I decided to
+use to practice TDD and to learn about benchmarking and profiling Ruby code. For
+that I’ll need at least two implementations. The first one is purposely not
+efficient. The second shall do its thing in one pass. Then I’ll be able to test
+and compare them.
+
 * Original problem statement
 Suppose we could access yesterday's stock prices as an array for stock `Apple`, where:
   - The indices are the time in minutes past trade opening time, which was 9:30am local time
